objects/MarketplaceDownloadLink__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <description>Define download links of assets on different Model (name) and Hypervisor.</description>
    <fields>
        <fullName>Hypervisor__c</fullName>
        <label>Hypervisor</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Link__c</fullName>
        <label>Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Model__c</fullName>
        <label>Model</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>Marketplace Download Link</label>
</CustomObject>